[gd_scene load_steps=4 format=3 uid="uid://cix1j6ynfe7pn"]

[ext_resource type="Script" path="res://hud.gd" id="1_y46dv"]
[ext_resource type="Script" path="res://minimap.gd" id="2_7l5sd"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_bawmo"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y46dv")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Reticle" type="TextureRect" parent="Control"]
modulate = Color(1, 1, 1, 0.32549)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.5
offset_top = -7.5
offset_right = 2.5
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_bawmo")

[node name="StatusDisplay" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="HP" type="HBoxContainer" parent="StatusDisplay"]
layout_mode = 2

[node name="HpLabel" type="Label" parent="StatusDisplay/HP"]
layout_mode = 2
text = "Health"

[node name="VSeparator" type="VSeparator" parent="StatusDisplay/HP"]
layout_mode = 2

[node name="HpValue" type="Label" parent="StatusDisplay/HP"]
unique_name_in_owner = true
layout_mode = 2
text = "100"

[node name="WeaponDisplay" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="Status" type="HBoxContainer" parent="WeaponDisplay"]
layout_mode = 2

[node name="GunName" type="Label" parent="WeaponDisplay/Status"]
unique_name_in_owner = true
layout_mode = 2
text = "Test Gun A"

[node name="ReloadIndicator" type="Label" parent="WeaponDisplay/Status"]
unique_name_in_owner = true
layout_mode = 2
text = "Reloading..."

[node name="Ammo" type="HBoxContainer" parent="WeaponDisplay"]
layout_mode = 2

[node name="Magazine" type="Label" parent="WeaponDisplay/Ammo"]
unique_name_in_owner = true
layout_mode = 2
text = "12"

[node name="VSeparator" type="VSeparator" parent="WeaponDisplay/Ammo"]
layout_mode = 2

[node name="Total" type="Label" parent="WeaponDisplay/Ammo"]
unique_name_in_owner = true
layout_mode = 2
text = "64"

[node name="ProgressBar" type="ProgressBar" parent="WeaponDisplay"]
unique_name_in_owner = true
layout_mode = 2
value = 20.0
show_percentage = false

[node name="Minimap" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
script = ExtResource("2_7l5sd")
detect_dist = 50

[node name="Panel" type="Panel" parent="Minimap"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="ColorRect" type="ColorRect" parent="Minimap/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2618, 0.77, 0.39732, 1)

[node name="TargetDisplay" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -152.5
offset_right = 152.5
offset_bottom = 54.0
grow_horizontal = 2

[node name="TargetHp" type="ProgressBar" parent="TargetDisplay"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="TargetLabel" type="Label" parent="TargetDisplay"]
unique_name_in_owner = true
layout_mode = 2
